# coderecon

./: ARCHITECTURE.md  MANIFEST.in  README.md  cli.py  coderecon_graph  coderecon_graph.json  mcp_server.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yaml
analyzer/: diff.py  scan.py
analyzer/discovery/: files.py
analyzer/inference/: edge_cases.py
analyzer/parsing/: functions.py
analyzer/signals/: aggregate.py  signals.py
analyzer/testing/: tests.py
llm/: client.py  explain.py  prompt.py  slice.py  suggest.py
report/: doctor.py  graph.py  summary.py  topology.py  writer.py
schemas/: analysis.py
