[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coderecon"
version = "0.1.3"
description = "Engineering-first repository reconnaissance and architectural auditing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "fastmcp",
    "click",
    "ollama",
    "requests"
]
[project.urls]
"Homepage" = "https://github.com/mvrkarthik07/coderecon"
"Documentation" = "https://github.com/mvrkarthik07/coderecon/blob/main/ARCHITECTURE.md"
"Youtube Demo" = "https://youtu.be/84yY41UJoqQ"

[project.scripts]
coderecon = "cli:main"

[tool.setuptools]
# Explicitly include the top-level scripts and directories
py-modules = ["cli"]
packages = ["analyzer", "llm", "report", "mcp", "schemas"]

[tool.setuptools.package-data]
# Ensure any non-python files (like templates) are included if you have them
"*" = ["*.md", "*.json"]